fix admin error messages text position (#1377)
 - remove unneeded chars from error list item classes, add new class
 - add small gap between error message items

--- a/packages/framework/src/Resources/styles/admin/components/in/message.less
+++ b/packages/framework/src/Resources/styles/admin/components/in/message.less
@@ -58,6 +58,10 @@
 
     &__list {
         .reset-ul();
+
+        li {
+            padding-top: 2px;
+        }
     }
 }
 
